<resources>
    <string name="app_name">GOAT Услуги</string>

    <string name="client_name_hint">Введите имя клиента</string>
    <string name="client_lastname_hint">Введите отчество клиента</string>
    <string name="client_email_hint">Введите Email пользователя</string>
    <string name="client_phone_hint">Введите телефон пользователя</string>
    <string name="client_status_hint">Введите статус пользователя</string>

    <string name="save_button">Сохранить</string>
    <string name="delete_button">Удалить</string>
    <string name="add_button">Добавить</string>

    <string name="client_menu_button">Клиенты</string>
    <string name="payment_menu_button">Платежи</string>
    <string name="service_menu_button">Услуги</string>


    <string name="service_name_hint">Введите наименование услуги</string>
    <string name="service_price_hint">Введите цену услуги</string>
    <string name="payment_client_hint">Выберите Клиента</string>
    <string name="payment_service_hint">Выберите Услугу</string>
    <string name="payment_date_hint">Введите дату</string>
    <string name="payment_quantity_hint">Введите количество</string>
    <string name="payment_amount_hint">Введите сумму</string>

    <string name="title_activity_login">ВХОД</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Зайти или зарегистрироваться</string>
    <string name="action_sign_in_short">Зайти</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="invalid_username">Введите логин</string>
    <string name="invalid_password">Пароль должен быть от 6 до 50 символов</string>
    <string name="login_failed">Не верно введен пароль</string>
    <string name="total_hint">ИТОГО</string>


</resources>