<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/client_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/client_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/client_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/client_lastname_hint"
        app:layout_constraintBottom_toTopOf="@+id/client_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_name" />

    <EditText
        android:id="@+id/client_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/client_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_lastname" />

    <EditText
        android:id="@+id/client_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/client_phone_hint"
        app:layout_constraintBottom_toTopOf="@+id/client_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_email" />

    <EditText
        android:id="@+id/client_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/client_status_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_phone" />


    <Button
        android:id="@+id/add_client"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_client"
        app:layout_constraintEnd_toStartOf="@+id/edit_client"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_client"
        app:layout_constraintStart_toEndOf="@+id/add_client" />

    <Button
        android:id="@+id/delete_client"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#970404"
        android:text="@string/delete_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_client" />


</androidx.constraintlayout.widget.ConstraintLayout>
