<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/payment_client"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/payment_client_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/payment_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/payment_service_hint"
        app:layout_constraintBottom_toTopOf="@+id/payment_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_client" />

    <EditText
        android:id="@+id/payment_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/payment_date_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_service" />

    <EditText
        android:id="@+id/payment_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/payment_quantity_hint"
        app:layout_constraintBottom_toTopOf="@+id/payment_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_date" />

    <EditText
        android:id="@+id/payment_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="24dp"
        android:hint="@string/payment_amount_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_quantity" />


    <Button
        android:id="@+id/add_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_payment"
        app:layout_constraintEnd_toStartOf="@+id/edit_payment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_payment"
        app:layout_constraintStart_toEndOf="@+id/add_payment" />

    <Button
        android:id="@+id/delete_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#970404"
        android:text="@string/delete_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_payment" />


</androidx.constraintlayout.widget.ConstraintLayout>
