<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/service_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/service_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/service_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/service_price_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_name" />

    <Button
        android:id="@+id/add_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_service"
        app:layout_constraintEnd_toStartOf="@+id/edit_service"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_service"
        app:layout_constraintStart_toEndOf="@+id/add_service" />

    <Button
        android:id="@+id/delete_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#970404"
        android:text="@string/delete_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_service" />

</androidx.constraintlayout.widget.ConstraintLayout>
